--- a/templates/visual.html
+++ b/templates/visual.html
@@ -2,6 +2,15 @@
 {% block content %}
 <form method="POST" action="/visual">
     <div>
+        <label for="graph type">Graph Type</label>
+        <select name="graph_type" id="graph_type">
+            <option value="line">Line Graph</option>
+            <option value="hist">Histogram</option>
+            <option value="bar">Bar Graph</option>
+            <option value="scatter">Scatter Plot</option>
+        </select>
+    </div>
+    <div>
         <label for="x axis">X Axis Value</label>
         <select name="x_value" id="x_value">
             <option value="pl_pnum">Number of Planets</option>
@@ -13,7 +22,7 @@
     <div>
         <label for="y axis">Y Axis Value</label>
         <select name="y_value" id="y_value">
-            <option>None</option>
+            <option value="None">None</option>
             <option value="pl_pnum">Number of Planets</option>
             <option value="pl_orbper">Orbital Period</option>
             <option value="pl_dens">Planet Density</option>
