Made more data visible and available to compare

--- a/templates/visual.html
+++ b/templates/visual.html
@@ -17,16 +17,21 @@
             <option value="pl_orbper">Orbital Period</option>
             <option value="pl_dens">Planet Density</option>
             <option value="pl_radj">Radius compared to Jupiter</option>
+            <option value="st_optmag">Optical Magnitude</option>
+            <option value="st_teff">Estimated Temp of the Star</option>
+            <option value="st_dist">Dist to the Star</option>
         </select>
     </div>
     <div>
         <label for="y axis">Y Axis Value</label>
         <select name="y_value" id="y_value">
-            <option value="None">None</option>
             <option value="pl_pnum">Number of Planets</option>
             <option value="pl_orbper">Orbital Period</option>
             <option value="pl_dens">Planet Density</option>
             <option value="pl_radj">Radius compared to Jupiter</option>
+            <option value="st_optmag">Optical Magnitude</option>
+            <option value="st_teff">Estimated Temp of the Star</option>
+            <option value="st_dist">Dist to the Star</option>
         </select>
     </div>
     <input type="submit">
