Adding Supplemental Info for user

--- a/templates/data.html
+++ b/templates/data.html
@@ -13,7 +13,8 @@
             <th>Estimated Temp (in Kelvin)</th>
             <th>Distance in parsecs(3.26 lightyears)</th>
             <th>Planet Name</th>
-            <th>Number of Planets in that System</th>
+            <th>Discovery Method</th>
+            <th>Number of Planets</th>
             <th>Orbital Period(Days)</th>
             <th>Planet Density(g/cm^3)</th>
             <th>Radius vs Jupiter</th>
@@ -24,7 +25,8 @@
                 <td>{{planet['st_optmag']}}</td>
                 <td>{{planet['st_teff']}}</td>
                 <td>{{planet['st_dist']}}</td>
-                <td>{{ planet['pl_name'] }}</td> 
+                <td>{{ planet['pl_name'] }}</td>
+                <td>{{ planet['pl_discmethod']}}</td> 
                 <td>{{ planet['pl_pnum'] }}</td>
                 <td>{{ planet['pl_orbper'] }}</td>
                 <td>{{ planet['pl_dens'] }}</td>
