--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,34 @@
 <div>
     <h1>Welcome to the Exoplanet Seeker</h1>
     <h2>This app gets its data from NASA's exoplanets database</h2>
+    <h3>What is an Exoplanet, you might ask. It's a planet outside of our solar system</h3>
+    <h4>(Yep, they're a real thing!)</h4>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <h3>Methods of Detection</h3>
+            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Astrometry" target="blank">Astrometry</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="blank">Disk Kinematics</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Eclipsing_binary_minima_timing" target="blank">Eclipse Timing Variations</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Direct_imaging" target="blank">Imaging</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Gravitational_microlensing" target="blank">Microlensing</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Reflection%2FEmission_Modulations" target="blank">Orbital Brightness Modulation</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Pulsar_timing" target="blank">Pulsar Timing</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="blank">Pulsation Timing Variations</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Radial_Velocity" target="blank">Radial Velocity</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Transit-timing_variation" target="blank">Transit Timing Variations</a></p>
+            <p><a href="https://en.wikipedia.org/wiki/Transit_(astronomy)" target="blank">Transit</a></p>
+        </div>
+        <div class="col-sm">
+            <h3>A Few Terms Defined</h3>
+            <p>What is a <strong>Kelvin</strong>?</p>
+            <p><a href="https://en.wikipedia.org/wiki/Kelvin" target="blank">Click here to learn what Kelvin is</a></p>
+            <p>What is a <strong>Parsec</strong>?</p>
+            <p><a href="https://en.wikipedia.org/wiki/Parsec" target="blank">Click here to learn what a Parsec is</a></p>
+
+        </div>
+    </div>
+    
 </div>
 {% endblock %}
