--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
 <body>
     <nav id = 'nav'>
         <ul>
-            <a href="/">Home</a>
-            <a href="/data">See the data</a>
+            <a class = 'nav_elem' href="/">Home</a>
+            <a class = 'nav_elem' href="/data">See the data</a>
         </ul>
     </nav>
     <div id = 'content'>{% block content %}{% endblock %}</div>
