--- a/templates/data.html
+++ b/templates/data.html
@@ -4,7 +4,7 @@
     <h1>Data Page</h1>
     <h2>This is a subset of the data pulled from NASA</h2>
 </div>
-<a href="/visual">Go Explore the Data</a>
+<a id="graph_link" href="/visual">Go Try Graphing the Data</a>
 <div>
     <table style="width:100%">
         <tr>
