--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,8 @@
 {% block content %}
 <div>
     <h1>Welcome to the Exoplanet Seeker</h1>
-    <h2>This app gets its data from NASA's exoplanets database</h2>
-    <h3>What is an Exoplanet, you might ask. It's a planet outside of our solar system</h3>
-    <h4>(Yep, they're a real thing!)</h4>
+    <h2>What is an Exoplanet, you might ask. It's a planet outside of our solar system</h2>
+    <h3 id = 'flavor_text'>(Yep, they're a real thing!)</h3>
 </div>
 <div class="container">
     <div class="row">
