--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,10 @@
         </ul>
     </nav>
     <div id = 'content'>{% block content %}{% endblock %}</div>
-    <div id = 'footer'>
-        <p>Created by Guy Jones</p>
-        <p>All data courtesy of NASA!!</p>
-        <a href="https://exoplanetarchive.ipac.caltech.edu/cgi-bin/TblView/nph-tblView?app=ExoTbls&config=planets">Link to NASA's data table</a>
+    <div id="footer">
+        <p class="foot_elem">Created by Guy Jones</p>
+        <p class="foot_elem">All data courtesy of NASA!!</p>
+        <a class="foot_elem" href="https://exoplanetarchive.ipac.caltech.edu/cgi-bin/TblView/nph-tblView?app=ExoTbls&config=planets">Link to NASA's data table</a>
     </div>  
 </body>
 </html>
