--- a/templates/data.html
+++ b/templates/data.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div>
+<div class="top_banner">
     <h1>Data Page</h1>
     <h2>This is a subset of the data pulled from NASA</h2>
 </div>
@@ -10,7 +10,7 @@
         <tr>
             <th>Star Name</th>
             <th>Optical Magnitude of the Star</th>
-            <th>Estimated Temp (in Kelvin)</th>
+            <th>Estimated Blackbody Temp (in Kelvin)</th>
             <th>Distance in parsecs(3.26 lightyears)</th>
             <th>Planet Name</th>
             <th>Discovery Method</th>
