--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<div>
+<div class="top_banner">
     <h1>Welcome to the Exoplanet Seeker</h1>
+    <br />
     <h2>What is an Exoplanet, you might ask. It's a planet outside of our solar system</h2>
     <h3 id = 'flavor_text'>(Yep, they're a real thing!)</h3>
 </div>
@@ -24,10 +25,13 @@
         <div class="col-sm">
             <h3>A Few Terms Defined</h3>
             <p>What is a <strong>Kelvin</strong>?</p>
-            <p><a href="https://en.wikipedia.org/wiki/Kelvin" target="blank">Click here to learn what Kelvin is</a></p>
+            <p>It's a unit of measure for temperature</p>
+            <p><a href="https://en.wikipedia.org/wiki/Kelvin" target="blank">Click here to learn more about Kelvin</a></p>
             <p>What is a <strong>Parsec</strong>?</p>
-            <p><a href="https://en.wikipedia.org/wiki/Parsec" target="blank">Click here to learn what a Parsec is</a></p>
-
+            <p>It's a unit of measure for distance</p>
+            <p><a href="https://en.wikipedia.org/wiki/Parsec" target="blank">Click here to learn more about Parsec</a></p>
+            <p>What is <strong>Blackbody</strong> and what does it have to do with temperature?</p>
+            <p><a href="https://en.wikipedia.org/wiki/Black-body_radiation" target="blank">Click here to learn about Blackbody Radiation and temperature</a></p>
         </div>
     </div>
     
