Styling and Polishing

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,13 +24,14 @@
         </div>
         <div class="col-sm">
             <h3>A Few Terms Defined</h3>
+            <p>What is a <strong>Parsec</strong>?</p>
+            <p>It's a unit of measure for distance</p>
+            <p><a href="https://en.wikipedia.org/wiki/Parsec" target="blank">Click here to learn more about Parsecs</a></p>
             <p>What is a <strong>Kelvin</strong>?</p>
             <p>It's a unit of measure for temperature</p>
             <p><a href="https://en.wikipedia.org/wiki/Kelvin" target="blank">Click here to learn more about Kelvin</a></p>
-            <p>What is a <strong>Parsec</strong>?</p>
-            <p>It's a unit of measure for distance</p>
-            <p><a href="https://en.wikipedia.org/wiki/Parsec" target="blank">Click here to learn more about Parsec</a></p>
-            <p>What is <strong>Blackbody</strong> and what does it have to do with temperature?</p>
+            <p>What is <strong>Black-body Radiation</strong> and what does it have to do with temperature?</p>
+            <p>Our own star has an effective Black-body radiation of 5,800 Kelvin</p>
             <p><a href="https://en.wikipedia.org/wiki/Black-body_radiation" target="blank">Click here to learn about Blackbody Radiation and temperature</a></p>
         </div>
     </div>
