--- a/static/style.css
+++ b/static/style.css
@@ -38,10 +38,12 @@ table {
 
 th {
     position: sticky;
+    padding: 0.25rem;
 }
 
 td {
     text-align: left;
+    padding: 0.25rem;
 }
 
 a {
@@ -55,4 +57,8 @@ a {
 
 #graph_link {
     font-size: 30px;
+}
+
+#graph_space {
+    min-height: 70vmin;
 }
