Added selection of # of bins

--- a/templates/visual.html
+++ b/templates/visual.html
@@ -8,6 +8,8 @@
             <option value="bar">Bar Graph</option>
             <option value="scatter">Scatter Plot</option>
         </select>
+        <label for="bins">Select number of 'bins' for Histograms</label>
+        <input type="number" name="bins" value="bins" min="1" placeholder="1"/>
     </div>
     <div>
         <label for="x axis">X Axis Value</label>
