--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <title>Exoplanet Seeker</title>
 </head>
 <body>
-    <nav id = 'nav'>
+    <nav id = "nav">
         <ul>
             <a class = 'nav_elem' href="/">Home</a>
             <a class = 'nav_elem' href="/data">See the data</a>
