--- a/templates/home.html
+++ b/templates/home.html
@@ -9,30 +9,47 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
-            <h3>Methods of Detection</h3>
-            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Astrometry" target="blank">Astrometry</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="blank">Disk Kinematics</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Eclipsing_binary_minima_timing" target="blank">Eclipse Timing Variations</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Direct_imaging" target="blank">Imaging</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Gravitational_microlensing" target="blank">Microlensing</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Reflection%2FEmission_Modulations" target="blank">Orbital Brightness Modulation</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Pulsar_timing" target="blank">Pulsar Timing</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="blank">Pulsation Timing Variations</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Radial_Velocity" target="blank">Radial Velocity</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Transit-timing_variation" target="blank">Transit Timing Variations</a></p>
-            <p><a href="https://en.wikipedia.org/wiki/Transit_(astronomy)" target="blank">Transit</a></p>
+            <h3 class="titles">Methods of Detection</h3>
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Astrometry" target="blank">Astrometry</a></p>
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Eclipsing_binary_minima_timing" target="blank">Eclipse Timing Variations</a></p>
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Gravitational_microlensing" target="blank">Microlensing</a></p> 
+                </div>
+                <div class="col-md-6">
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="blank">Disk Kinematics</a></p>
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Direct_imaging" target="blank">Imaging</a></p>
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Reflection%2FEmission_Modulations" target="blank">Orbital Brightness Modulation</a></p>
+                </div>
+                <div class="col-md-6">
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Pulsar_timing" target="blank">Pulsar Timing</a></p>
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Methods_of_detecting_exoplanets#Radial_Velocity" target="blank">Radial Velocity</a></p>
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Transit-timing_variation" target="blank">Transit Timing Variations</a></p>
+                </div>
+                <div class="col-md-6">
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="blank">Pulsation Timing Variations</a></p>
+                    <p class="dect_def"><a href="https://en.wikipedia.org/wiki/Transit_(astronomy)" target="blank">Transit</a></p>
+                </div>
+            </div>
         </div>
         <div class="col-sm">
-            <h3>A Few Terms Defined</h3>
-            <p>What is a <strong>Parsec</strong>?</p>
-            <p>It's a unit of measure for distance</p>
-            <p><a href="https://en.wikipedia.org/wiki/Parsec" target="blank">Click here to learn more about Parsecs</a></p>
-            <p>What is a <strong>Kelvin</strong>?</p>
-            <p>It's a unit of measure for temperature</p>
-            <p><a href="https://en.wikipedia.org/wiki/Kelvin" target="blank">Click here to learn more about Kelvin</a></p>
-            <p>What is <strong>Black-body Radiation</strong> and what does it have to do with temperature?</p>
-            <p>Our own star has an effective Black-body radiation of 5,800 Kelvin</p>
-            <p><a href="https://en.wikipedia.org/wiki/Black-body_radiation" target="blank">Click here to learn about Blackbody Radiation and temperature</a></p>
+            <h3 class="titles">A Few Terms Defined</h3>
+            <div class="facts">
+                <h4 class="titles">What is a <strong>Parsec</strong>?</h4>
+                <p>It's a unit of measure for distance</p>
+                <p><a href="https://en.wikipedia.org/wiki/Parsec" target="blank">Click here to learn more about Parsecs</a></p>
+            </div>
+            <div class="facts">
+                <h4 class="titles">What is a <strong>Kelvin</strong>?</h4>
+                <p>It's a unit of measure for temperature</p>
+                <p><a href="https://en.wikipedia.org/wiki/Kelvin" target="blank">Click here to learn more about Kelvin</a></p>
+            </div>
+            <div class="facts">
+                <h4 class="titles">What is <strong>Black-body Radiation</strong></h4> 
+                <h5>What does it have to do with temperature?</h5>
+                <p>Our own star has an effective Black-body radiation of 5,800 Kelvin</p>
+                <p><a href="https://en.wikipedia.org/wiki/Black-body_radiation" target="blank">Click here to learn about Blackbody Radiation and temperature</a></p>
+            </div>
         </div>
     </div>
     
