--- a/templates/data.html
+++ b/templates/data.html
@@ -2,9 +2,11 @@
 {% block content %}
 <div class="top_banner">
     <h1>Data Page</h1>
-    <h2>This is a subset of the data pulled from NASA</h2>
+    <h2 class="subtitle">This is a subset of the data pulled from NASA</h2>
 </div>
-<a id="graph_link" href="/visual">Go Try Graphing the Data</a>
+<div id="graph_button">
+    <a id="graph_link" href="/visual">Go Graph the Data</a>
+</div>  
 <div>
     <table style="width:100%">
         <tr>
