--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
 <div class="top_banner">
     <h1>Welcome to the Exoplanet Seeker</h1>
     <br />
-    <h2>What is an Exoplanet, you might ask. It's a planet outside of our solar system</h2>
-    <h3 id = 'flavor_text'>(Yep, they're a real thing!)</h3>
+    <h2 class ="subtitle">What is an Exoplanet, you might ask. It's a planet outside of our solar system</h2>
+    <h3 id = 'sub_subtitle'>(Yep, they're a real thing!)</h3>
 </div>
 <div class="container">
     <div class="row">
