Styling and Polishing

--- a/templates/visual.html
+++ b/templates/visual.html
@@ -37,7 +37,23 @@
     </div>
     <input type="submit">
 </form>
-<div id="graph_space">
-   <img src="{{image}}" />
-</div>
+    <div id="graph_space">
+        <img src="{{image}}" />
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h3>What is a <strong>Histogram</strong>?</h3>
+                <p>A Histogram divides all the given values into a certain number of "bins" and shows the vertical height of each bin as the number of values in that bin</p>
+            </div>
+            <div class="col-sm-4">
+                <h3>What is a <strong>Bar Graph</strong>?</h3>
+                <p>A Bar Graph takes each value and shows its value as a certain height</p>
+            </div>
+            <div class="col-sm-4">
+                <h3>What is a <strong>Scatter Plot</strong>?</h3>
+                <p>A Scatter Plot takes two sets of related values and plots them. This shows the relationship between the values</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
