--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <nav id = "nav">
         <ul>
             <a class = 'nav_elem' href="/">Home</a>
-            <a class = 'nav_elem' href="/data">See the data</a>
+            <a class = 'nav_elem' href="/data">See the Data</a>
         </ul>
     </nav>
     <div id = 'content'>{% block content %}{% endblock %}</div>
